It has to be 'j' instead of 'l'.

--- a/kapitel_1.tex
+++ b/kapitel_1.tex
@@ -367,8 +367,8 @@ wird ( falls mindestens ein $x_{i,j} > 0$ ist ) mindestens eine Komponente $0$ g
 Gegeben sei eine zulässige Basislösung $x^0$ mit Basiskomponenten $x_i^0$, ($i=1,\dotsc,m$) und Basis $B=\{A_{B(i)} | i=1,\dotsc,m\}$ und ein Index $j$ sodass $A_j \notin B$. Dann ist die neue zulässige Lösung, die durch \eqref{eq:min_austausch} und durch
 \begin{align}
 x_i^1 &= \begin{cases}
-x_i^0 - \theta_0 x_{i,j} & i \neq l\\
-\theta_0 & i = l\end{cases}
+x_i^0 - \theta_0 x_{i,j} & i \neq j\\
+\theta_0 & i = j\end{cases}
 \end{align}
 bestimmt ist, eine zulässige Basislösung mit
 \begin{align*}
