--- a/macros.tex
+++ b/macros.tex
@@ -51,6 +51,7 @@
 \def\laue#1{\underline{#1}{\raise -0.4ex\hbox{\vphantom{$#1$}\vrule height 1.3ex}}}
 
 \DeclareMathOperator{\adj}{Adj}
+\DeclareMathOperator{\LexMin}{lex-min}
 
 
 
